--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@600&family=Montserrat:wght@300&family=Noto+Sans:wght@600&family=Open+Sans&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
     <title>NGEN Movie Viewer</title>
   </head>
   <body>
